Fix layout issues in sponsor component

--- a/static/sass/app/footer/_footer.scss
+++ b/static/sass/app/footer/_footer.scss
@@ -11,7 +11,6 @@
   [class*=col-] > .partners__link,
   [class*=col-] > .sponsors__link {
     background: $white;
-    display: block;
     padding: 0.75rem;
     position: relative;
   }
