--- a/static/sass/app/sponsors/_sponsors.scss
+++ b/static/sass/app/sponsors/_sponsors.scss
@@ -21,7 +21,7 @@
     }
 
     &__column {
-      align-self: stretch;
+      display: flex;
     }
 
     &__sponsor {
@@ -31,7 +31,6 @@
         padding: 0.75rem;
       }
       position: relative;
-      height: 100%;
     }
     &__info {
       @include diagonal-gradient($blue-light-gradient1, $blue-light-gradient2, $blue-light-gradient1, $blue-light-gradient2);
